# TCC

./: .env.example  .gitignore  .scan-eslint-config.json  README.md  clone_test_results.csv  eslint.config.js  k6-lint-results.csv  package-lock.json  package.json  tsconfig.json
k6-scripts/: correct-usage.js  feature-envy-tags.js  init-context-heavy-operations.js  load-test.js  magic-number.js  missing-check.js  multiple-scenarios.js  package-lock.json  probe-urls.js  repositorios_k6.csv  script.ts  spike-test.js
k6-scripts/smell examples/: missing-tags.js  missing-thresholds.js
k6-scripts/test types/: soak-test.js  stress-test.js
scripts/: 1 - get_k6_repos.ipynb  2 - scan-repos.js  3 - analyse_k6_repos.ipynb  analyse_k6_repos.ipynb  clone_test.py  get_k6_repos.ipynb  processed_k6_repos.csv  repositorios_k6.csv  retry_missing_repos.py  scan-repos.js
scripts/output/: k6-lint-results.csv  processed_k6_repos.csv  repositorios_k6.csv
src/: code.js  index.js  index.ts  main.ts
src/ast/: extractor.ts  tokens.ts  tree.ts  walker.ts
src/config/: espree.ts
src/exceptions/: NodeNotFoundException.ts
src/smells/: detectors.ts
src/types/: abstract-syntax-tree.d.ts
test-espree/: code.js  index.js  package-lock.json  package.json
test-files/: pyproject.toml
test-files/src/js/: code.js  index.js  package.json
test-files/src/python/: main.py  result.json  tokens.json  tree.json  utils.py
teste/: package.json
tests/: feature-envy-tags.test.js  no-heavy-init-context.test.js  require-check.test.js  require-tags.test.js  require-thresholds.test.js
(+10 files in other folders)
