[project]
name = "test-files"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Lucas",email = "samuel.barbosa@edge.ufal.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "test_files", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
